src/test/deca/context/valid/op-un-not.deca
// Description :
//    Négation logique d'un booléen
// Résultats :
//    
//
// Historique :
//    créé le 12/01/2025
{
    boolean x = true;
    boolean y = !x;
}