src/test/deca/context/invalid/object/method-not-found.deca
// Description :
//  Appel d'une méthode non définie dans la classe.
// Résultats :
//    Erreur : Method 'undefinedMethod' does not exist in class 'MyClass'.
// Historique :
//    créé le 19/01/2025
class MyClass {}

{
    MyClass obj = new MyClass();
    obj.undefinedMethod(); 
}